# multisigmonitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.cross  Makefile  README.md  SECURITY.md  bug-fixes-summary.md  critical-events-implementation.md  database-migration-enhanced-security.sql  database-migration-fixed.sql  database-migration.sql  deploy.sh  ecosystem.local.config.js  ecosystem.prod.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  Cargo.toml  README-telegram.md  README-webhook.md  README.md  create-notification-table.js  index.js  package-lock.json  package.json  supabase.js  test-safe-api.js  webhook-templates.js
backend/migrations/: 001_initial_schema.sql  002_add_security_analyses.sql  003_add_worker_tables.sql  004_add_transaction_data.sql  005_consolidate_security_tables.sql  006_fix_last_checks_schema.sql  007_add_transactions_unique_constraint.sql  008_fix_transactions_unique_constraint.sql  009_add_api_keys.sql  010_add_security_analyses_unique_constraint.sql  011_add_email_verification.sql  012_remove_email_features.sql  013_add_worker_activity.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/api/: activity.rs  api_keys.rs  assessment.rs  auth.rs  dashboard.rs  discord_oauth.rs  email_verification.rs  mod.rs  monitors.rs  multisig_info.rs  notifications.rs  safe_client.rs  sanctions.rs  security_analysis.rs  transaction_data_tests.rs  transactions.rs
backend/src/constants/: mod.rs  safe_addresses.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: api_key.rs  mod.rs  monitor.rs  security_analysis.rs  user.rs  worker_activity.rs
backend/src/services/: api_key.rs  auth.rs  hash_verification.rs  mod.rs  safe_assessment.rs  security_analysis.rs  security_analysis_tests.rs
backend/src/template_engine/: assessment_engine.rs  builtins_fetcher.rs  engine.rs  loader.rs  mod.rs  registry.rs  schema.rs
backend/src/worker/: mod.rs  monitor.rs  monitor_tests.rs  safe_api.rs
backend/templates/safe-assessment/: address-validation.yaml  creation-transaction-validation.yaml  factory-validation.yaml  fallback-handler-validation.yaml  initializer-validation.yaml  mastercopy-validation.yaml  module-validation.yaml  multisig-info-validation.yaml  ownership-validation.yaml  proxy-validation.yaml  safe-configuration-validation.yaml  sanctions-validation.yaml
backend/templates/transaction-analysis/: contract-interaction.yaml  (+27 more)
backend/tests/: external_api_tests.rs  mailjet_test.rs  transaction_api_tests.rs
(+137 files in other folders)
