[package]
name = "multisigmonitor-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "multisigmonitor-backend"
path = "src/main.rs"

[[bin]]
name = "monitor-worker"
path = "src/bin/worker.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tower_governor = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
time = { version = "0.3", features = ["macros"] }
siwe = "0.6"
hex = "0.4"
ethers = { version = "2.0", default-features = false }
hex-literal = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
lazy_static = "1.4"
futures = "0.3"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"
bs58 = "0.5"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
